force-app/main/default/objects/Opportunity/fields/AnoFabricacao__c.field-meta.xml
<CustomField>
    <fullName>AnoFabricacao__c</fullName>
    <label>Ano de fabricação</label>
    <length>15</length>
    <type>Text</type>
</CustomField>