force-app/main/default/objects/Opportunity/fields/AnoModelo__c.field-meta.xml
<CustomField>
    <fullName>AnoModelo__c</fullName>
    <label>Ano Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>