force-app/main/default/objects/Opportunity/fields/AreaInteresse__c.field-meta.xml
<CustomField>
    <fullName>AreaInteresse__c</fullName>
    <label>Área de interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>17Com (marketing)</fullName>
            </value>
            <value>
                <fullName>Antecipação de FGTS</fullName>
            </value>
            <value>
                <fullName>Câmbio</fullName>
            </value>
            <value>
                <fullName>Cartão de crédito</fullName>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>Consignado</fullName>
            </value>
            <value>
                <fullName>Consórcio</fullName>
            </value>
            <value>
                <fullName>Conta corrente</fullName>
            </value>
            <value>
                <fullName>Convênio médico</fullName>
            </value>
            <value>
                <fullName>Convênio odontológico</fullName>
            </value>
            <value>
                <fullName>Convênio PME</fullName>
            </value>
            <value>
                <fullName>Crédito imobiliário</fullName>
            </value>
            <value>
                <fullName>Crédito pessoa jurídica</fullName>
            </value>
            <value>
                <fullName>Crédito Pessoal</fullName>
            </value>
            <value>
                <fullName>Empréstimo garantia de imóvel</fullName>
            </value>
            <value>
                <fullName>Empréstimo garantia de veículo</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Imóvel</fullName>
            </value>
            <value>
                <fullName>Investimento</fullName>
            </value>
            <value>
                <fullName>Operações estruturadas</fullName>
            </value>
            <value>
                <fullName>Previdência</fullName>
            </value>
            <value>
                <fullName>Promotora</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>