force-app/main/default/objects/Opportunity/fields/BancosSimulados__c.field-meta.xml
<CustomField>
    <fullName>BancosSimulados__c</fullName>
    <label>Bancos simulados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>341 - ITAU</fullName>
            </value>
            <value>
                <fullName>033 - SANTANDER</fullName>
            </value>
            <value>
                <fullName>237 - BRADESCO</fullName>
            </value>
            <value>
                <fullName>104 - CAIXA</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>342 - CREDITAS</fullName>
            </value>
            <value>
                <fullName>GALLERIA BANK</fullName>
            </value>
            <value>
                <fullName>707 - DAYCOVAL</fullName>
            </value>
            <value>
                <fullName>T CACH</fullName>
            </value>
            <value>
                <fullName>611 - PAULISTA</fullName>
            </value>
            <value>
                <fullName>PONTTE</fullName>
            </value>
            <value>
                <fullName>PORTO SEGURO</fullName>
            </value>
            <value>
                <fullName>001 - BANCO DO BRASIL</fullName>
            </value>
            <value>
                <fullName>077 - INTER</fullName>
            </value>
            <value>
                <fullName>336 - C6 BANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>