force-app/main/default/objects/Opportunity/fields/CotacoesFinalizadas__c.field-meta.xml
<CustomField>
    <fullName>CotacoesFinalizadas__c</fullName>
    <label>Cotações finalizadas</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Contratado</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.NProposta__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>