force-app/main/default/objects/Opportunity/fields/DataAporte__c.field-meta.xml
<CustomField>
    <fullName>DataAporte__c</fullName>
    <label>Data do Aporte</label>
    <type>Date</type>
</CustomField>