force-app/main/default/objects/Opportunity/fields/DataHoraIntegracaoProtheus__c.field-meta.xml
<CustomField>
    <fullName>DataHoraIntegracaoProtheus__c</fullName>
    <description>Campo de controle para registrar os horários dos envios de Oportunidade ganha para o Protheus.</description>
    <label>Data/hora integração Protheus</label>
    <type>DateTime</type>
</CustomField>