force-app/main/default/objects/Opportunity/fields/DataHoraUltimaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>DataHoraUltimaAprovacao__c</fullName>
    <description>Campo de controle para o processo de aprovação de investimentos.</description>
    <label>Data/hora última aprovação</label>
    <type>DateTime</type>
</CustomField>