force-app/main/default/objects/Opportunity/fields/DataTerminoContrato__c.field-meta.xml
<CustomField>
    <fullName>DataTerminoContrato__c</fullName>
    <label>Data de término do contrato</label>
    <type>Date</type>
</CustomField>