force-app/main/default/objects/Opportunity/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>