force-app/main/default/objects/Opportunity/fields/FaseAprovacao__c.field-meta.xml
<CustomField>
    <fullName>FaseAprovacao__c</fullName>
    <description>Campo utilizado para o Processo de aprovação de Investimentos personalizado com VP sendo a aprovadora em todas as etapas.</description>
    <label>Fase da aprovação</label>
    <length>30</length>
    <type>Text</type>
</CustomField>