force-app/main/default/objects/Opportunity/fields/FinalidadeCredito__c.field-meta.xml
<CustomField>
    <fullName>FinalidadeCredito__c</fullName>
    <label>Finalidade do Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>