force-app/main/default/objects/Opportunity/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Débito em conta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>