force-app/main/default/objects/Opportunity/fields/Funcionario__c.field-meta.xml
<CustomField>
    <fullName>Funcionario__c</fullName>
    <formula>Account.Funcionario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funcionário</label>
    <type>Checkbox</type>
</CustomField>