force-app/main/default/objects/Opportunity/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <formula>Owner.Manager.FirstName &amp; Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerencia</label>
    <type>Text</type>
</CustomField>