force-app/main/default/objects/Opportunity/fields/Id_Formula_Opp__c.field-meta.xml
<CustomField>
    <fullName>Id_Formula_Opp__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Formula Opp</label>
    <type>Text</type>
</CustomField>