force-app/main/default/objects/Opportunity/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>