force-app/main/default/objects/Opportunity/fields/JustifiquePendenciaBem__c.field-meta.xml
<CustomField>
    <fullName>JustifiquePendenciaBem__c</fullName>
    <label>Justifique a pendência do bem</label>
    <type>TextArea</type>
</CustomField>