force-app/main/default/objects/Opportunity/fields/JustifiquePendenciaComprador__c.field-meta.xml
<CustomField>
    <fullName>JustifiquePendenciaComprador__c</fullName>
    <label>Justifique a pendência do comprador</label>
    <type>TextArea</type>
</CustomField>