force-app/main/default/objects/Opportunity/fields/JustifiquePendenciaVendedor__c.field-meta.xml
<CustomField>
    <fullName>JustifiquePendenciaVendedor__c</fullName>
    <label>Justifique a pendência do vendedor</label>
    <type>TextArea</type>
</CustomField>