force-app/main/default/objects/Opportunity/fields/MostraBotaoParecer__c.field-meta.xml
<CustomField>
    <fullName>MostraBotaoParecer__c</fullName>
    <description>Atendendo as condições da formaula, o Botão CRIAR PARECER fica visível.</description>
    <formula>OR(
  AND(
				UnidadeNegocio__c = &apos;Investimentos&apos;,
				NOT(ISBLANK(Produto__c)),
		  OR(ISPICKVAL(StageName, &apos;Pendente&apos;),
       ISPICKVAL(StageName, &apos;Reprovado&apos;),
       ISPICKVAL(StageName, &apos;Devolvido&apos;),
       ISPICKVAL(StageName, &apos;Taxa/Prazo Aprovada&apos;),
       ISPICKVAL(StageName, &apos;Taxa/Prazo Reprovada&apos;)
    )
  ),
  AND(
				UnidadeNegocio__c = &apos;Operações estruturadas&apos;,
				ISPICKVAL(StageName , &apos;Pendente&apos;),
				NOT(ISBLANK(Produto__c))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MostraBotaoParecer</label>
    <type>Checkbox</type>
</CustomField>