force-app/main/default/objects/Opportunity/fields/NomeProduto__c.field-meta.xml
<CustomField>
    <fullName>NomeProduto__c</fullName>
    <formula>Produto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Produto</label>
    <type>Text</type>
</CustomField>