force-app/main/default/objects/Opportunity/fields/NProposta__c.field-meta.xml
<CustomField>
    <fullName>NProposta__c</fullName>
    <inlineHelpText>Número da proposta do banco escolhido, preenchido após finalizar a cotação.</inlineHelpText>
    <label>Nº Proposta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>