force-app/main/default/objects/Opportunity/fields/ParecerDevolvido__c.field-meta.xml
<CustomField>
    <fullName>ParecerDevolvido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>O escalonamento para VP deverá partir somente a partir da validação do crédito ou compliance, ou caso o crédito ou compliance tenha devolvido para o comitê e haja necessidade de tal escalonamento.</description>
    <label>ParecerDevolvido</label>
    <type>Checkbox</type>
</CustomField>