force-app/main/default/objects/Opportunity/fields/PendenciaVendedor__c.field-meta.xml
<CustomField>
    <fullName>PendenciaVendedor__c</fullName>
    <label>Pendência do vendedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>