force-app/main/default/objects/Opportunity/fields/PercentualSacado__c.field-meta.xml
<CustomField>
    <fullName>PercentualSacado__c</fullName>
    <label>Percentual de sacado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>