force-app/main/default/objects/Opportunity/fields/Portabilidade__c.field-meta.xml
<CustomField>
    <fullName>Portabilidade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portabilidade</label>
    <type>Checkbox</type>
</CustomField>