force-app/main/default/objects/Opportunity/fields/PossuiCarencia__c.field-meta.xml
<CustomField>
    <fullName>PossuiCarencia__c</fullName>
    <label>Possui Carência?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>