force-app/main/default/objects/Opportunity/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <label>Prazo</label>
    <type>TextArea</type>
</CustomField>