force-app/main/default/objects/Opportunity/fields/PrazoContratoMeses__c.field-meta.xml
<CustomField>
    <fullName>PrazoContratoMeses__c</fullName>
    <formula>PrazoContratoDias__c / 30.44</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo do contrato (meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>