force-app/main/default/objects/Opportunity/fields/PrevisaoCartorio__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoCartorio__c</fullName>
    <label>Previsão do cartório</label>
    <type>Date</type>
</CustomField>