force-app/main/default/objects/Opportunity/fields/ProdutosInteresse__c.field-meta.xml
<CustomField>
    <fullName>ProdutosInteresse__c</fullName>
    <label>Produtos de interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antecipação de recebíveis</fullName>
            </value>
            <value>
                <fullName>Conta Escrow</fullName>
            </value>
            <value>
                <fullName>Giro Parcelado</fullName>
            </value>
            <value>
                <fullName>Capital de Giro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>