force-app/main/default/objects/Opportunity/fields/PropostaProtheus__c.field-meta.xml
<CustomField>
    <fullName>PropostaProtheus__c</fullName>
    <inlineHelpText>Número da proposta cadastrada no Protheus.</inlineHelpText>
    <label>Proposta Protheus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>