force-app/main/default/objects/Opportunity/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <label>Quantidade</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>