force-app/main/default/objects/Opportunity/fields/SistemaAmortizacao__c.field-meta.xml
<CustomField>
    <fullName>SistemaAmortizacao__c</fullName>
    <label>Sistema de amortização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>