force-app/main/default/objects/Opportunity/fields/SituacaoImovel__c.field-meta.xml
<CustomField>
    <fullName>SituacaoImovel__c</fullName>
    <label>Situação do imóvel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usado</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>