force-app/main/default/objects/Opportunity/fields/StatusCredito__c.field-meta.xml
<CustomField>
    <fullName>StatusCredito__c</fullName>
    <label>Status do crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utilizado</fullName>
            </value>
            <value>
                <fullName>Utilizado parcialmente</fullName>
            </value>
            <value>
                <fullName>Não utilizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>