force-app/main/default/objects/Opportunity/fields/StatusProtheus__c.field-meta.xml
<CustomField>
    <fullName>StatusProtheus__c</fullName>
    <defaultValue>&apos;Não integrada&apos;</defaultValue>
    <description>Campo criado para controlar quando uma oportunidade é integrada no Protheus.</description>
    <label>Status Protheus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não integrada</fullName>
            </value>
            <value>
                <fullName>Em processamento</fullName>
            </value>
            <value>
                <fullName>Em reprocessamento</fullName>
            </value>
            <value>
                <fullName>Reprocessada</fullName>
            </value>
            <value>
                <fullName>Integrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>