force-app/main/default/objects/Opportunity/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Modalidade__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Capital de giro</fullName>
            </value>
            <value>
                <fullName>Desconto</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Terreno</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
            <value>
                <fullName>Carro</fullName>
            </value>
            <value>
                <fullName>Caminhão</fullName>
            </value>
            <value>
                <fullName>Passeio</fullName>
            </value>
            <value>
                <fullName>Pesado</fullName>
            </value>
            <value>
                <fullName>Utilitário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>